--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -22,6 +22,20 @@
   }
 
   .blog-title-content {
+    &:hover {
+      h1 {
+        a {
+          color: $ac-primary;
+        }
+      }
+
+      a.inline-button {
+        &::after {
+          width: 100%;
+        }
+      }
+    }
+
     h1 {
       font-style: normal;
       font-weight: 600;
@@ -330,6 +344,19 @@ ul.social-share-button {
     margin-right: 30px;
     position: sticky;
     top: 170px;
+    overflow-y: auto;
+    max-height: calc(100vh - 120px);
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 
     .collapsable-menu {
       margin-bottom: 30px;
@@ -354,15 +381,14 @@ ul.social-share-button {
       .ac-single-checkbox {
         margin-bottom: 10px;
 
-        .is-checkradio {
-          margin-right: 10px;
-        }
-
         label {
           font-weight: 400;
           font-size: 16px;
           line-height: 100%;
           color: #3e393e;
+          padding-left: 10px;
+          user-select: none;
+          cursor: pointer;
         }
       }
     }
@@ -485,106 +511,6 @@ ul.social-share-button {
 }
 
 // blog page 2022
-
-//blog hero area start
-// .blog-hero-area {
-//   &.section-padding {
-//     padding: 160px 0 100px;
-//   }
-//   .blog-slider-wrapper {
-//     position: relative;
-//     z-index: 1;
-//     overflow: hidden;
-//     .social-media-share {
-//       border: 10px solid $ac-primary;
-//       width: 240px;
-//       padding: 30px;
-//       text-align: right;
-//       position: absolute;
-//       top: 50%;
-//       margin-top: -170px;
-//       right: 0;
-//       z-index: 9;
-//     }
-//     .blog-slider-inner {
-//       overflow: hidden;
-//       position: relative;
-//       z-index: 1;
-//       .slider-button {
-//         position: absolute;
-//         right: 42.6%;
-//         bottom: 0px;
-//         z-index: 2;
-//         .slide {
-//           background: #fff;
-//           border: 1px solid transparent;
-//           width: 88px;
-//           height: 80px;
-//           font-size: 30px;
-//           cursor: pointer;
-//           display: block;
-//           img {
-//             animation: arrowAnimate 2s infinite;
-//           }
-//           &:hover {
-//             img {
-//               animation-play-state: paused;
-//             }
-//           }
-//         }
-//       }
-//       .single-blog {
-//         opacity: 0;
-//         visibility: hidden;
-//         transition: 0.3s ease-in-out;
-//         display: none;
-//         overflow: hidden;
-//         position: relative;
-//         z-index: 1;
-//         &.show {
-//           opacity: 1;
-//           visibility: visible;
-//           display: block;
-//         }
-//         .blog-content-wrapper {
-//           .blog-content-inner {
-//             padding-right: 50px;
-//             .meta-date {
-//               margin-bottom: 6px;
-//             }
-//             h1 {
-//               display: block;
-//               font-size: 36px;
-//               line-height: 44px;
-//               margin-bottom: 7px;
-//             }
-//             .description {
-//               line-height: 26px;
-//               margin-bottom: 20px;
-//               overflow: hidden;
-//               text-overflow: ellipsis;
-//               display: -webkit-box;
-//               line-clamp: 6;
-//               -webkit-line-clamp: 6;
-//               box-orient: vertical;
-//               -webkit-box-orient: vertical;
-//             }
-//           }
-//         }
-//         .blog-slider-image {
-//           max-width: 82%;
-//           height: 620px;
-//           background-size: cover;
-//           background-position: center;
-//           display: block;
-//           user-select: none;
-//           overflow: hidden;
-//           background-color: #333;
-//         }
-//       }
-//     }
-//   }
-// }
 
 //blog body start
 .blog-left-sidebar {
@@ -714,31 +640,132 @@ ul.social-share-button {
 /*=================================================================================================
                                     Responsive code start
 =================================================================================================*/
-/**************************************************************** 
-                  Full HD Min Width 1407
-**************************************************************** */
-/* Full HD Min Width 1408px */
-@media (min-width: 1408px) {}
 
-/**************************************************************** 
-                  Widescreen Between 1216px and 1407px
-**************************************************************** */
-@media (min-width: 1216px) and (max-width: 1407px) {}
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: 768px) {}
 
-/**************************************************************** 
-                  Desktop Between 1024px and 1215px
-**************************************************************** */
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) and (max-width: 768px) {}
+
+// Medium devices (tablets, 769px and up)
+@media (min-width: 769px) and (max-width: 1023.98px) {}
+
+// Large devices (desktops, 1024px and up)
 @media (min-width: 1024px) and (max-width: 1215px) {}
 
-/**************************************************************** 
-                  Tablet Between 769px and 1023px
-**************************************************************** */
-@media (min-width: 769px) and (max-width: 1023px) {}
+// Extra large devices (large desktops, 1216px and up)
+@media (min-width: 1216px) {}
 
-/**************************************************************** 
-                    Mobile Up to 768px. 
-**************************************************************** */
-@media only screen and (min-width: 100px) and (max-width: 768px) {}
+@media (min-width: 1408px) and (max-width: 1600px) {
+  .hero-area-blog {
+    .blog-title-content {
+      h1 {
+        font-size: 32px;
+        letter-spacing: 0.3px;
+      }
+
+      p {
+        margin-bottom: 10px;
+      }
+
+      .social-share {
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .meta {
+    margin-bottom: 10px;
+
+    .author {
+      margin-right: 4px;
+    }
+  }
+
+  .single-blog {
+    .image {
+      img {
+        max-height: 145px;
+      }
+    }
+
+    .meta {
+      i.fa {
+        font-size: 13px;
+        margin-right: 0.2rem;
+      }
+
+      .author {
+        a {
+          font-size: 13px;
+        }
+      }
+
+      .date {
+        strong {
+          font-size: 13px;
+        }
+      }
+
+      a.inline-button {
+        font-size: 12px;
+      }
+    }
+
+    h2 {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
+  }
+
+  .search-filter-area {
+
+    .filter-wrapper {
+      padding: 6px 12px;
+
+      .search-area {
+        .fa {
+          font-size: 18px;
+          margin-right: 0.75rem;
+        }
+      }
+    }
+
+    .filter-area {
+      .viewing-mode {
+        button {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+  }
+
+  .single-blog {
+    min-height: 367px;
+  }
+
+  .blog-items-area {
+    .left-sidebar {
+      .collapsable-menu {
+        .ac-single-checkbox {
+          margin-bottom: 6px;
+
+          label {
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+
+  .blog-items {
+    .blog-title-content {
+      h2 {
+        font-size: 18px;
+      }
+    }
+  }
+}
 
 /*=================================================================================================
                                     Responsive code end
